created a simple jumping over obstacle game. followed using https://www.youtube.com/watch?v=bG2BmmYr9NQ&list=LL&index=1&ab_channel=KnifeCircus tutorial

--- a/home.html
+++ b/home.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
-
-<html>
+<!-- html onclick is for when we click on html page, invokes(calls) JS jump function -->
+<html onclick="jump()">
     <head>
         <title>First JS Project</title>
+        <link rel = "stylesheet" href = "style.css"
     </head>
 
     <body>
+        <div id="game">
+            <div id="character"></div>
+            <div id="obstacle"></div>
+        </div>
 
     </body>
+    
+    <script src = "script.js"> </script> 
+    <!-- linking javascript file -->
+
 </html>
