added score function to keep track of user score.

--- a/home.html
+++ b/home.html
@@ -7,10 +7,12 @@
     </head>
 
     <body>
+        
         <div id="game">
             <div id="character"></div>
             <div id="obstacle"></div>
         </div>
+        <div id="score">0</div>
 
     </body>
     
